add: configurator page

--- a/src/components/_catalog-chapter.html
+++ b/src/components/_catalog-chapter.html
@@ -12,7 +12,7 @@
                         >24 <span>товара</span></span
                     ></span
                 >
-                <button type="button" class="catalog__btn btn btn_primary">
+                <button type="button" class="catalog__btn btn btn_primary btn_primary_fw">
                     <span class="btn__txt txt22 txt22_sb">Скачать каталог</span>
                 </button>
             </div>
