--- a/src/components/_configurator.html
+++ b/src/components/_configurator.html
@@ -13,42 +13,42 @@
             </div>
             <div class="configurator__content">
                 <span class="configurator__subtitle">Тип и модель электропривода</span>
-                <div class="configurator__options">
-                    <div class="configurator__option option-configurator">
+                <div class="configurator__types">
+                    <div class="configurator__type type-configurator">
                         <input
                             type="radio"
-                            name="configuratorOption"
+                            name="configuratorType"
                             value=""
                             checked
-                            class="option-configurator__input"
+                            class="type-configurator__input"
                         />
-                        <div class="option-configurator__content">
-                            <div class="option-configurator__image-wrap">
+                        <div class="type-configurator__content">
+                            <div class="type-configurator__image-wrap">
                                 <img
                                     src="./assets/images/items/CHervyachniy-reduktor-GS.webp"
                                     alt=""
-                                    class="option-configurator__image"
+                                    class="type-configurator__image"
                                 />
                             </div>
-                            <span class="option-configurator__heading">Задвижка</span>
+                            <span class="type-configurator__heading">Задвижка</span>
                         </div>
                     </div>
-                    <div class="configurator__option option-configurator">
+                    <div class="configurator__type type-configurator">
                         <input
                             type="radio"
-                            name="configuratorOption"
+                            name="configuratorType"
                             value=""
-                            class="option-configurator__input"
+                            class="type-configurator__input"
                         />
-                        <div class="option-configurator__content">
-                            <div class="option-configurator__image-wrap">
+                        <div class="type-configurator__content">
+                            <div class="type-configurator__image-wrap">
                                 <img
                                     src="./assets/images/items/04.webp"
                                     alt=""
-                                    class="option-configurator__image"
+                                    class="type-configurator__image"
                                 />
                             </div>
-                            <span class="option-configurator__heading">Затвор</span>
+                            <span class="type-configurator__heading">Затвор</span>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         </select>
                     </div>
                 </div>
-                <button type="button" class="configurator__btn btn btn_primary">
+                <button type="button" class="configurator__btn btn btn_primary btn_primary_fw">
                     <span class="btn__txt txt22 txt22_sb">Продолжить</span>
                 </button>
             </div>
