--- a/src/components/_service-center.html
+++ b/src/components/_service-center.html
@@ -118,7 +118,7 @@
                     <span class="li-item-service-center__text">Комплексный подход к обслуживанию</span>
                 </li>
             </ul>
-            <a href="#" class="service-center__btn btn btn_primary">
+            <a href="#" class="service-center__btn btn btn_primary btn_primary_fw">
                 <span class="btn__txt txt22 txt22_sb">Узнать подробнее</span>
             </a>
         </div>
