--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -11,3 +11,4 @@
 @import '../sections/services';
 @import '../sections/banner';
 @import '../sections/service-center';
+@import '../sections/not-found';
