--- a/src/ui/_buttons.scss
+++ b/src/ui/_buttons.scss
@@ -15,6 +15,8 @@
         @media (max-width: 48em) {
             padding: 2.8rem 5.6rem;
 
+            height: 10rem;
+
             &::after {
                 width: 5.6rem;
             }
