--- a/src/components/_banner.html
+++ b/src/components/_banner.html
@@ -6,7 +6,7 @@
             требованиям и обеспечит эффективное функционирование трубопроводной арматуры.
         </p>
         <div class="banner__group">
-            <button type="button" class="banner__btn btn btn_primary btn_primary_white">
+            <button type="button" class="banner__btn btn btn_primary btn_primary_white btn_primary_fw">
                 <span class="btn__txt txt22 txt22_sb">Связаться со специалистом</span>
             </button>
             <a href="tel:71234567890" class="banner__link h h_h3">+7 (123) 456 78 90</a>
