--- a/src/components/_catalog.html
+++ b/src/components/_catalog.html
@@ -9,7 +9,7 @@
                 <span class="catalog__heading h h_h1"
                     >Каталог<span class="catalog__items-counter">44</span></span
                 >
-                <button type="button" class="catalog__btn btn btn_primary">
+                <button type="button" class="catalog__btn btn btn_primary btn_primary_fw">
                     <span class="btn__txt txt22 txt22_sb">Скачать каталог</span>
                 </button>
             </div>
