--- a/src/scss/sections/_configurator.scss
+++ b/src/scss/sections/_configurator.scss
@@ -22,23 +22,50 @@
     }
 
     &__body {
-        display: flex;
+        position: relative;
+
+        display: grid;
+        grid-template-columns: 102rem 1fr;
         gap: 1.6rem;
 
         @media (max-width: 48em) {
+            display: flex;
             flex-direction: column;
             gap: 4rem;
+
+            .configurator_hero & {
+                gap: 6.4rem;
+            }
         }
     }
 
     &__bg {
+        position: relative;
+
         height: 34.2rem;
 
+        &::after {
+            content: '';
+
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            width: 100%;
+            height: 100%;
+
+            background: linear-gradient(70.46deg, rgba(0, 0, 0, 0) 56.04%, rgba(0, 0, 0, 0.2) 86.92%);
+        }
+
         @media (min-width: 48em) {
-            flex: 0 0 102rem;
             width: 102rem;
             height: 100%;
             min-height: 49.6rem;
+        }
+        @media (max-width: 48em) {
+            .configurator_hero & {
+                height: 50.8rem;
+            }
         }
     }
 
@@ -54,6 +81,12 @@
 
         @media (min-width: 48em) {
             flex: 1 1 auto;
+
+            .configurator_hero & {
+                padding: 3.2rem;
+
+                border: 1px solid #00478066;
+            }
         }
     }
 
@@ -73,7 +106,7 @@
         }
     }
 
-    &__options {
+    &__types {
         margin-bottom: 3.2rem;
 
         display: flex;
@@ -86,7 +119,7 @@
         }
     }
 
-    &__option {
+    &__type {
         flex: 1 1 auto;
     }
 
@@ -96,6 +129,10 @@
         display: flex;
         flex-direction: column;
         row-gap: 3.2rem;
+
+        .configurator_hero & {
+            margin-bottom: 4rem;
+        }
 
         @media (max-width: 48em) {
             margin-bottom: 4.8rem;
@@ -107,9 +144,129 @@
             align-self: flex-start;
         }
     }
+
+    &__steps {
+        margin-bottom: 2.4rem;
+
+        display: flex;
+        gap: 2.4rem;
+
+        @media (min-width: 48em) {
+            position: absolute;
+            z-index: 2;
+            top: 50%;
+            left: 3.2rem;
+
+            margin-bottom: 0;
+
+            flex-direction: column;
+            gap: 1.6rem;
+        }
+    }
+
+    &__step {
+        padding: 0 2.4rem;
+
+        display: inline-flex;
+        justify-content: flex-start;
+        align-items: center;
+        column-gap: 1rem;
+
+        flex: 1 1 auto;
+
+        height: 11.2rem;
+
+        background-color: $gray;
+
+        transition:
+            background-color 0.3s ease,
+            color 0.3s ease;
+
+        &._is-active {
+            color: $white;
+
+            background-color: $blue;
+        }
+
+        @media (min-width: 48em) {
+            padding: 0;
+
+            justify-content: center;
+            flex: 0 0 auto;
+
+            width: 5.6rem;
+            height: 5.6rem;
+
+            clip-path: polygon(18% 0, 100% 0, 100% 30%, 100% 70%, 100% 100%, 0 100%, 0% 70%, 0 18%);
+
+            background-color: $white;
+
+            span {
+                display: none;
+            }
+        }
+    }
+
+    &__subtitle-label {
+        margin-bottom: 2rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 3.2rem;
+        }
+    }
+
+    &__field {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2rem;
+
+        @media (max-width: 48em) {
+            row-gap: 3.2rem;
+        }
+    }
+
+    &__options {
+        margin-bottom: 6rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 6.4rem;
+        }
+    }
 }
 
-.option-configurator {
+.options-configurator {
+    display: grid;
+    gap: 4.8rem;
+
+    width: 100%;
+
+    @media (min-width: 48em) {
+        grid-template-columns: repeat(2, auto);
+        gap: 5rem;
+    }
+
+    &__group {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2rem;
+
+        @media (max-width: 48em) {
+            row-gap: 3.2rem;
+        }
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2rem;
+
+        @media (max-width: 48em) {
+            row-gap: 4rem;
+        }
+    }
+}
+
+.type-configurator {
     position: relative;
 
     &__input {
@@ -122,7 +279,7 @@
 
         appearance: none;
 
-        &:checked + .option-configurator__content {
+        &:checked + .type-configurator__content {
             border: 1px solid $gray;
 
             background-color: $gray;
