--- a/src/scss/sections/_product.scss
+++ b/src/scss/sections/_product.scss
@@ -145,7 +145,6 @@
 
         @media (min-width: 48em) {
             grid-template-columns: 1fr 42.8rem;
-            column-gap: 16.5rem;
         }
     }
     &__banner {
@@ -169,6 +168,15 @@
     @media (min-width: 48em) {
         grid-template-columns: 40.6rem 1fr;
         gap: 3.8rem;
+    }
+
+    &__description {
+        padding-top: 3.2rem;
+
+        @media (min-width: 48em) {
+            padding-top: 0;
+            padding-right: 16.5rem;
+        }
     }
 
     &__btn {
@@ -259,9 +267,6 @@
             &:not(:last-child) {
                 margin-bottom: 2rem;
             }
-            &:first-child {
-                padding-top: 3.2rem;
-            }
         }
     }
 
@@ -271,6 +276,27 @@
                 svg {
                     transform: rotate(-90deg);
                 }
+            }
+        }
+    }
+
+    &__cards {
+        padding-top: 3.2rem;
+
+        display: grid;
+        gap: 3.2rem;
+
+        width: 100%;
+
+        @media (min-width: 48em) {
+            padding-top: 0;
+            padding-right: 1.6rem;
+
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1.6rem;
+
+            .documentation-card {
+                min-height: 36rem;
             }
         }
     }
@@ -285,6 +311,8 @@
     flex-direction: column;
 
     background-color: $blue;
+
+    overflow: hidden;
 
     &::after {
         content: '';
