--- a/src/ui/_typo.scss
+++ b/src/ui/_typo.scss
@@ -1,6 +1,6 @@
 .h {
     font-family: 'Framer Sans';
-    font-weight: 500;
+    font-weight: 600;
     line-height: 120%;
 
     &_h1 {
@@ -36,6 +36,19 @@
             font-size: 4.4rem;
             line-height: 1;
         }
+    }
+}
+
+.label {
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 120%;
+    text-transform: uppercase;
+    opacity: 0.4;
+
+    @media (max-width: 48em) {
+        font-size: 3.2rem;
+        line-height: 4rem;
     }
 }
 
