--- a/src/components/_catalog-chapter.html
+++ b/src/components/_catalog-chapter.html
@@ -13,7 +13,7 @@
                     ></span
                 >
                 <button type="button" class="catalog__btn btn btn_primary btn_primary_fw">
-                    <span class="btn__txt txt22 txt22_sb">Скачать каталог</span>
+                    <span class="btn__txt txt22 txt22_m">Скачать каталог</span>
                 </button>
             </div>
         </div>
