--- a/src/components/_configurator.html
+++ b/src/components/_configurator.html
@@ -11,7 +11,7 @@
                     class="configurator__bg-image"
                 />
             </div>
-            <div class="configurator__content">
+            <form action="#" data-select-single data-dev class="configurator__content">
                 <span class="configurator__subtitle">Тип и модель электропривода</span>
                 <div class="configurator__types">
                     <div class="configurator__type type-configurator">
@@ -69,9 +69,9 @@
                     </div>
                 </div>
                 <button type="button" class="configurator__btn btn btn_primary btn_primary_fw">
-                    <span class="btn__txt txt22 txt22_sb">Продолжить</span>
+                    <span class="btn__txt txt22 txt22_m">Продолжить</span>
                 </button>
-            </div>
+            </form>
         </div>
     </div>
 </section>
