--- a/src/components/_hero.html
+++ b/src/components/_hero.html
@@ -9,7 +9,7 @@
                                 >Производство электроприводов  для трубопроводной арматуры</span
                             >
                             <a href="#" class="btn btn_primary btn_primary_white">
-                                <span class="btn__txt txt22 txt22_sb">Перейти в каталог</span>
+                                <span class="btn__txt txt22 txt22_m">Перейти в каталог</span>
                             </a>
                             <p class="swiper-slide-hero__text">
                                 Предлагаем вам широкий ассортимент продукции, который в совокупности с нашими
@@ -29,7 +29,7 @@
                                 >Производство электроприводов  для трубопроводной арматуры</span
                             >
                             <a href="#" class="btn btn_primary btn_primary_white">
-                                <span class="btn__txt txt22 txt22_sb">Перейти в каталог</span>
+                                <span class="btn__txt txt22 txt22_m">Перейти в каталог</span>
                             </a>
                             <p class="swiper-slide-hero__text">
                                 Предлагаем вам широкий ассортимент продукции, который в совокупности с нашими
@@ -49,7 +49,7 @@
                                 >Производство электроприводов  для трубопроводной арматуры</span
                             >
                             <a href="#" class="btn btn_primary btn_primary_white">
-                                <span class="btn__txt txt22 txt22_sb">Перейти в каталог</span>
+                                <span class="btn__txt txt22 txt22_m">Перейти в каталог</span>
                             </a>
                             <p class="swiper-slide-hero__text">
                                 Предлагаем вам широкий ассортимент продукции, который в совокупности с нашими
