--- a/src/components/_product.html
+++ b/src/components/_product.html
@@ -1,4 +1,4 @@
-<section class="product">
+<section data-modal="#productSelectionModal" class="product">
     <div class="product__container container">
         <nav class="product__breadcrumbs breadcrumbs">
             <a href="#" class="breadcrumbs__link">Главная</a>
@@ -208,6 +208,9 @@
                                 <span class="characteristics-item-product__text">8101, 8102, 8103</span>
                             </li>
                             <li class="product__characteristics-item characteristics-item-product">
+                                <span class="characteristics-item-product__heading txt22 txt22_sb"
+                                    >Диапазон моментов</span
+                                >
                                 <div class="product__dropdown dropdown">
                                     <select data-show-selection>
                                         <option value="1" selected>от 70 до 600 нм</option>
@@ -230,7 +233,7 @@
                                 type="button"
                                 class="product__btn btn btn_primary btn_primary_fw"
                             >
-                                <span class="btn__txt txt22 txt22_sb">Оставить заявку</span>
+                                <span class="btn__txt txt22 txt22_m">Оставить заявку</span>
                             </button>
                         </div>
                     </div>
@@ -471,7 +474,7 @@
                     type="button"
                     class="product-banner__btn btn btn_primary btn_primary_white btn_primary_fw"
                 >
-                    <span class="btn__txt txt22 txt22_sb">Скачать брошюру</span>
+                    <span class="btn__txt txt22 txt22_m">Скачать брошюру</span>
                 </button>
                 <div class="product-banner__image-wrap">
                     <img class="product-banner__image" src="./assets/images/items/am_01_1.webp" alt="" />
