--- a/src/components/_question-form.html
+++ b/src/components/_question-form.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="question-form__submit">
                     <button type="submit" class="question-form__btn btn btn_primary btn_primary_fw">
-                        <span class="btn__txt txt22 txt22_sb">Отправить</span>
+                        <span class="btn__txt txt22 txt22_m">Отправить</span>
                     </button>
                     <p class="question-form__text">
                         Нажимая «Отправить» вы подтверждаете, что согласны на обработку персональных данных
