--- a/src/components/_service-center.html
+++ b/src/components/_service-center.html
@@ -119,7 +119,7 @@
                 </li>
             </ul>
             <a href="#" class="service-center__btn btn btn_primary btn_primary_fw">
-                <span class="btn__txt txt22 txt22_sb">Узнать подробнее</span>
+                <span class="btn__txt txt22 txt22_m">Узнать подробнее</span>
             </a>
         </div>
         <div class="service-center__bg">
