--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -12,3 +12,4 @@
 @import '../sections/banner';
 @import '../sections/service-center';
 @import '../sections/not-found';
+@import '../sections/stock';
