--- a/src/components/_catalog.html
+++ b/src/components/_catalog.html
@@ -10,7 +10,7 @@
                     >Каталог<span class="catalog__items-counter">44</span></span
                 >
                 <button type="button" class="catalog__btn btn btn_primary btn_primary_fw">
-                    <span class="btn__txt txt22 txt22_sb">Скачать каталог</span>
+                    <span class="btn__txt txt22 txt22_m">Скачать каталог</span>
                 </button>
             </div>
         </div>
