--- a/src/components/_not-found.html
+++ b/src/components/_not-found.html
@@ -6,7 +6,7 @@
                 Возможно страница устарела, была удалена, или был введен неверный адрес в адресной строке.
             </p>
             <a href="#" class="not-found__btn btn btn_primary">
-                <span class="btn__txt txt22 txt22_sb">На главную</span>
+                <span class="btn__txt txt22 txt22_m">На главную</span>
             </a>
         </div>
         <div class="not-found__bg">
