--- a/src/scss/sections/_configurator.scss
+++ b/src/scss/sections/_configurator.scss
@@ -34,7 +34,7 @@
             gap: 4rem;
 
             .configurator_hero & {
-                gap: 6.4rem;
+                gap: normal;
             }
         }
     }
@@ -43,6 +43,14 @@
         position: relative;
 
         height: 34.2rem;
+
+        &_product {
+            background-color: $gray;
+
+            &::after {
+                display: none;
+            }
+        }
 
         &::after {
             content: '';
@@ -57,6 +65,12 @@
             background: linear-gradient(70.46deg, rgba(0, 0, 0, 0) 56.04%, rgba(0, 0, 0, 0.2) 86.92%);
         }
 
+        &._is-hidden {
+            .configurator__bg-image {
+                display: none;
+            }
+        }
+
         @media (min-width: 48em) {
             width: 102rem;
             height: 100%;
@@ -64,6 +78,8 @@
         }
         @media (max-width: 48em) {
             .configurator_hero & {
+                margin-bottom: 6.4rem;
+
                 height: 50.8rem;
             }
         }
@@ -80,6 +96,7 @@
         flex-direction: column;
 
         @media (min-width: 48em) {
+            align-self: flex-start;
             flex: 1 1 auto;
 
             .configurator_hero & {
@@ -103,6 +120,10 @@
 
             font-size: 4rem;
             line-height: 4.8rem;
+
+            .configurator_hero & {
+                margin-bottom: 4.8rem;
+            }
         }
     }
 
@@ -136,6 +157,10 @@
 
         @media (max-width: 48em) {
             margin-bottom: 4.8rem;
+
+            .configurator_hero & {
+                margin-bottom: 6.4rem;
+            }
         }
     }
 
@@ -210,6 +235,10 @@
     &__subtitle-label {
         margin-bottom: 2rem;
 
+        &_u {
+            margin-bottom: 0.8rem;
+        }
+
         @media (max-width: 48em) {
             margin-bottom: 3.2rem;
         }
@@ -231,6 +260,14 @@
         @media (max-width: 48em) {
             margin-bottom: 6.4rem;
         }
+    }
+
+    &__loader-wrap {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
     }
 }
 
