--- a/src/ui/_typo.scss
+++ b/src/ui/_typo.scss
@@ -70,6 +70,11 @@
         font-weight: 600;
     }
 
+    &_m {
+        font-family: 'Framer Sans';
+        font-weight: 500;
+    }
+
     @media (max-width: 48em) {
         font-size: 3.6rem;
     }
